--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -94,5 +94,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1\1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1\2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
