--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -59,12 +59,33 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="1.xaml.cs">
       <DependentUpon>1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="2.xaml.cs">
+      <DependentUpon>2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="3.xaml.cs">
+      <DependentUpon>3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="4.xaml.cs">
+      <DependentUpon>4.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -76,6 +97,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -109,6 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="1\2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1\3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
