--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -148,9 +148,16 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ownerhorse.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager.cs" />
+    <Compile Include="ownerhorse.xaml.cs">
+      <DependentUpon>ownerhorse.xaml</DependentUpon>
+    </Compile>
     <Compile Include="pair.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
@@ -200,9 +207,7 @@
     <Resource Include="1\2.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="1\3.png" />
-  </ItemGroup>
-  <ItemGroup>
+    <Resource Include="1\6.jpg" />
     <Content Include="BaseModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>BaseModel.Context.cs</LastGenOutput>
